// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots AggregatedTranscriptions Default 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 jpnCZn"
>
  <div
    className="StyledBox-sc-13pk1d4-0 knMaQB"
  >
    <div
      className="StyledBox-sc-13pk1d4-0 htJbXs"
    >
      <div
        className="StyledBox-sc-13pk1d4-0 dfkMUT sc-cSHVUG hDUXUW"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 kipODK"
        >
          <div
            className="StyledBox-sc-13pk1d4-0 ipDZoh"
          >
            <span
              className="StyledText-sc-1sadyjn-0 bXoRNz"
              size="1em"
            >
              Transcribed Text
            </span>
            <button
              className="StyledButton-sc-323bzc-0 dmFHgS"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              type="button"
            >
              <span
                className="StyledText-sc-1sadyjn-0 ceLiyb"
                size="small"
              >
                ADD LINE
              </span>
            </button>
          </div>
          <div
            className="StyledBox-sc-13pk1d4-0 hCTAHO sc-chPdSV lxGhg"
          >
            <div
              className="StyledBox-sc-13pk1d4-0 bIBUuE"
            >
              <div
                className="StyledBox-sc-13pk1d4-0 bGdGYa"
              >
                <div
                  className="StyledBox-sc-13pk1d4-0 jPnVmB"
                >
                  <h6
                    className="sc-gzVnrw kDhxVb"
                  >
                    Aggregated Transcription
                  </h6>
                </div>
                <div
                  className="StyledBox-sc-13pk1d4-0 koruWX"
                >
                  <h6
                    className="sc-gzVnrw kDhxVb"
                  >
                    Flag
                  </h6>
                </div>
                <div
                  className="StyledBox-sc-13pk1d4-0 jJdlSY"
                >
                  <h6
                    className="sc-gzVnrw sc-htoDjs GbAiK"
                  >
                    Consensus Score
                  </h6>
                </div>
              </div>
              <div
                className="StyledBox-sc-13pk1d4-0 drPSxh"
              />
              <div
                className="StyledBox-sc-13pk1d4-0 cqufCe sc-bZQynM evmlAb"
              >
                <span
                  className="StyledText-sc-1sadyjn-0 cDmvCm"
                  size="xsmall"
                >
                  This page does not contain transcription data.
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots AggregationSettings Default 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 jpnCZn"
>
  <div
    className="StyledBox-sc-13pk1d4-0 knMaQB"
  >
    <div
      className="StyledBox-sc-13pk1d4-0 cbpHOs"
    >
      <div
        className="StyledBox-sc-13pk1d4-0 gwYnZy sc-eNQAEJ esYNcD"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-ellipsis "
          data-icon="ellipsis"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M120 256C120 286.9 94.93 312 64 312C33.07 312 8 286.9 8 256C8 225.1 33.07 200 64 200C94.93 200 120 225.1 120 256zM280 256C280 286.9 254.9 312 224 312C193.1 312 168 286.9 168 256C168 225.1 193.1 200 224 200C254.9 200 280 225.1 280 256zM328 256C328 225.1 353.1 200 384 200C414.9 200 440 225.1 440 256C440 286.9 414.9 312 384 312C353.1 312 328 286.9 328 256z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </div>
      <div
        className="StyledStack-ajspsk-0 cBSAEZ"
      >
        <div
          className="StyledStack__StyledStackLayer-ajspsk-1 zZZtW"
        >
          <div
            className="StyledBox-sc-13pk1d4-0 koruWX"
          >
            <div
              className="StyledBox-sc-13pk1d4-0 yGrji"
            >
              <span
                className="StyledText-sc-1sadyjn-0 ceLiyb"
              >
                Edit Aggregation Settings
              </span>
              <button
                aria-label="Close Aggregation Settings"
                className="StyledButton-sc-323bzc-0 dmFHgS"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                type="button"
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-circle-xmark "
                  data-icon="circle-xmark"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  style={Object {}}
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 256C0 114.6 114.6 0 256 0C397.4 0 512 114.6 512 256C512 397.4 397.4 512 256 512C114.6 512 0 397.4 0 256zM175 208.1L222.1 255.1L175 303C165.7 312.4 165.7 327.6 175 336.1C184.4 346.3 199.6 346.3 208.1 336.1L255.1 289.9L303 336.1C312.4 346.3 327.6 346.3 336.1 336.1C346.3 327.6 346.3 312.4 336.1 303L289.9 255.1L336.1 208.1C346.3 199.6 346.3 184.4 336.1 175C327.6 165.7 312.4 165.7 303 175L255.1 222.1L208.1 175C199.6 165.7 184.4 165.7 175 175C165.7 184.4 165.7 199.6 175 208.1V208.1z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </button>
            </div>
            <div
              className="StyledBox-sc-13pk1d4-0 koruWX"
            >
              <div
                className="StyledBox-sc-13pk1d4-0 koruWX"
              >
                <div
                  className="StyledBox-sc-13pk1d4-0 czHqvg"
                >
                  <span
                    className="StyledText-sc-1sadyjn-0 ceLiyb"
                  >
                    Choose a clustering algorithm based on the way in which transcriptions have been made.
                  </span>
                  <div
                    className="StyledBox__StyledBoxGap-sc-13pk1d4-1 cDZOKh"
                  />
                  <div
                    className="StyledBox-sc-13pk1d4-0 gIvbdb"
                  >
                    <button
                      className="StyledButton-sc-323bzc-0 dmFHgS"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                      type="button"
                    >
                      <div
                        className="StyledBox-sc-13pk1d4-0 czHqvg sc-kGXeez fOyJew"
                      >
                        <img
                          alt="Optics Aggregation Example"
                          className="StyledImage-ey4zx9-0 kIodYe"
                          src="optics.png"
                        />
                        <div
                          className="StyledBox__StyledBoxGap-sc-13pk1d4-1 cDZOKh"
                        />
                        <span
                          className="StyledText-sc-1sadyjn-0 ceLiyb"
                        >
                          OPTICS Reducer
                        </span>
                        <div
                          className="StyledBox__StyledBoxGap-sc-13pk1d4-1 cDZOKh"
                        />
                        <span
                          className="StyledText-sc-1sadyjn-0 cDmvCm"
                          size="xsmall"
                        >
                          Used for clustering full-width transcriptions
                        </span>
                      </div>
                    </button>
                    <button
                      className="StyledButton-sc-323bzc-0 dmFHgS"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                      type="button"
                    >
                      <div
                        className="StyledBox-sc-13pk1d4-0 czHqvg sc-kpOJdX kdgkNy"
                      >
                        <img
                          alt="DBScan Aggregation Example"
                          className="StyledImage-ey4zx9-0 kIodYe"
                          src="dbscan.png"
                        />
                        <div
                          className="StyledBox__StyledBoxGap-sc-13pk1d4-1 cDZOKh"
                        />
                        <span
                          className="StyledText-sc-1sadyjn-0 ceLiyb"
                        >
                          DBSCAN Reducer
                        </span>
                        <div
                          className="StyledBox__StyledBoxGap-sc-13pk1d4-1 cDZOKh"
                        />
                        <span
                          className="StyledText-sc-1sadyjn-0 cDmvCm"
                          size="xsmall"
                        >
                          Used for clustering shorter, incomplete transcriptions of a line
                        </span>
                      </div>
                    </button>
                  </div>
                </div>
                <div
                  className="StyledBox__StyledBoxGap-sc-13pk1d4-1 cDZOKh"
                />
                <div
                  className="StyledBox-sc-13pk1d4-0 zwPvD"
                >
                  <button
                    aria-label="Close Aggregation Settings"
                    className="StyledButton-sc-323bzc-0 dmFHgS"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    type="button"
                  >
                    <span
                      className="StyledText-sc-1sadyjn-0 ceLiyb"
                      size="small"
                    >
                      CLOSE AND CANCEL
                    </span>
                  </button>
                  <div
                    className="StyledBox__StyledBoxGap-sc-13pk1d4-1 gNUkxn"
                  />
                  <button
                    className="StyledButton-sc-323bzc-0 ivDLrh"
                    disabled={true}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    type="button"
                  >
                    <span
                      className="StyledText-sc-1sadyjn-0 ceLiyb"
                      size="small"
                    >
                      NEXT
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DownloadDataModal Default 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 jpnCZn"
>
  <div
    className="StyledBox-sc-13pk1d4-0 knMaQB"
  >
    <div
      className="StyledBox-sc-13pk1d4-0 jGXRJc"
    >
      <div
        className="StyledBox-sc-13pk1d4-0 bnvJhB"
      >
        <span
          className="StyledText-sc-1sadyjn-0 cbxRyB"
          size="large"
        >
          Download subject data
        </span>
        <div
          className="StyledBox__StyledBoxGap-sc-13pk1d4-1 gNUkxn"
        />
        <button
          aria-label="Close Download Subject Data Modal"
          className="StyledButton-sc-323bzc-0 laBEqz"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-circle-xmark fa-xs "
            data-icon="circle-xmark"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 256C0 114.6 114.6 0 256 0C397.4 0 512 114.6 512 256C512 397.4 397.4 512 256 512C114.6 512 0 397.4 0 256zM175 208.1L222.1 255.1L175 303C165.7 312.4 165.7 327.6 175 336.1C184.4 346.3 199.6 346.3 208.1 336.1L255.1 289.9L303 336.1C312.4 346.3 327.6 346.3 336.1 336.1C346.3 327.6 346.3 312.4 336.1 303L289.9 255.1L336.1 208.1C346.3 199.6 346.3 184.4 336.1 175C327.6 165.7 312.4 165.7 303 175L255.1 222.1L208.1 175C199.6 165.7 184.4 165.7 175 175C165.7 184.4 165.7 199.6 175 208.1V208.1z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </button>
      </div>
      <div
        className="StyledBox__StyledBoxGap-sc-13pk1d4-1 cDZOKh"
      />
      <span
        className="StyledText-sc-1sadyjn-0 hbnEID"
      >
        Download a .zip file containing:
      </span>
      <div
        className="StyledBox__StyledBoxGap-sc-13pk1d4-1 cDZOKh"
      />
      <div
        className="StyledBox-sc-13pk1d4-0 koruWX"
      >
        <span
          className="StyledText-sc-1sadyjn-0 ceLiyb"
          size="small"
        >
          • Line by line transcription and metadata (.csv)
        </span>
        <div
          className="StyledBox__StyledBoxGap-sc-13pk1d4-1 cDZOKh"
        />
        <span
          className="StyledText-sc-1sadyjn-0 ceLiyb"
          size="small"
        >
          • Text-only file (.txt)
        </span>
        <div
          className="StyledBox__StyledBoxGap-sc-13pk1d4-1 cDZOKh"
        />
        <span
          className="StyledText-sc-1sadyjn-0 ceLiyb"
          size="small"
        >
          • Raw, unparsed transcription data (.json)
        </span>
      </div>
      <div
        className="StyledBox__StyledBoxGap-sc-13pk1d4-1 cDZOKh"
      />
      <div
        className="StyledBox-sc-13pk1d4-0 dEYhEg"
      >
        <button
          aria-label="Close Download Subject Data Modal"
          className="StyledButton-sc-323bzc-0 jfbKsv"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          type="button"
        >
          <span
            className="StyledText-sc-1sadyjn-0 ceLiyb"
            size="small"
          >
            CLOSE
          </span>
        </button>
        <button
          aria-label="Download Subject Data"
          className="StyledButton-sc-323bzc-0 jfbKsv"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          type="button"
        >
          <span
            className="StyledText-sc-1sadyjn-0 ceLiyb"
            size="small"
          >
            DOWNLOAD
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots FilmstripViewer Default 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 jpnCZn"
>
  <div
    className="StyledBox-sc-13pk1d4-0 knMaQB"
  >
    <div
      className="StyledBox-sc-13pk1d4-0 bBlavh sc-jAaTju lEldS"
    >
      <div
        className="StyledBox-sc-13pk1d4-0 bnvJhB"
      >
        <span
          className="StyledText-sc-1sadyjn-0 bXoRNz"
          size="1em"
        >
          All Pages
        </span>
        <button
          className="StyledButton-sc-323bzc-0 dmFHgS"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          type="button"
        >
          <span
            className="StyledText-sc-1sadyjn-0 ceLiyb sc-jDwBTQ eYRRwn"
          >
            Delete Pages
          </span>
        </button>
      </div>
      <div
        className="StyledBox-sc-13pk1d4-0 fhTKrx"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots HeaderButtons LayoutButton 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 jpnCZn"
>
  <button
    className="StyledButton-sc-323bzc-0 dmFHgS"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    type="button"
  >
    <div
      className="StyledBox-sc-13pk1d4-0 cHqCJo"
    >
      <span
        className="StyledText-sc-1sadyjn-0 hTlKKJ sc-hMqMXs hCtDtz"
      >
        Layout
      </span>
      <div
        className="StyledBox__StyledBoxGap-sc-13pk1d4-1 iEoiXx"
      />
      <div
        className="StyledBox-sc-13pk1d4-0 jmYunQ"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-pause fa-xs "
          color="#555555"
          data-icon="pause"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 320 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M272 63.1l-32 0c-26.51 0-48 21.49-48 47.1v288c0 26.51 21.49 48 48 48L272 448c26.51 0 48-21.49 48-48v-288C320 85.49 298.5 63.1 272 63.1zM80 63.1l-32 0c-26.51 0-48 21.49-48 48v288C0 426.5 21.49 448 48 448l32 0c26.51 0 48-21.49 48-48v-288C128 85.49 106.5 63.1 80 63.1z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
        <div
          className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hhQian"
        />
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-pause fa-xs fa-rotate-90 "
          color="#CCCCCC"
          data-icon="pause"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 320 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M272 63.1l-32 0c-26.51 0-48 21.49-48 47.1v288c0 26.51 21.49 48 48 48L272 448c26.51 0 48-21.49 48-48v-288C320 85.49 298.5 63.1 272 63.1zM80 63.1l-32 0c-26.51 0-48 21.49-48 48v288C0 426.5 21.49 448 48 448l32 0c26.51 0 48-21.49 48-48v-288C128 85.49 106.5 63.1 80 63.1z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </div>
    </div>
  </button>
</div>
`;

exports[`Storyshots HeaderButtons MoreButton 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 jpnCZn"
>
  <button
    aria-label="Open Drop"
    className="StyledButton-sc-323bzc-0 dmFHgS"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    type="button"
  >
    <div
      className="StyledBox-sc-13pk1d4-0 eQTSO"
    >
      <span
        className="StyledText-sc-1sadyjn-0 hTlKKJ"
      >
        MORE
      </span>
      <svg
        aria-label="FormDown"
        className="StyledIcon-ofa7kd-0 iOkQrb"
        viewBox="0 0 24 24"
      >
        <polyline
          fill="none"
          points="18 9 12 15 6 9"
          stroke="#000"
          strokeWidth="2"
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`Storyshots HeaderButtons UndoButton 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 jpnCZn"
>
  <button
    className="StyledButton-sc-323bzc-0 ivDLrh"
    disabled={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    type="button"
  >
    <div
      className="StyledBox-sc-13pk1d4-0 cHqCJo"
    >
      <span
        className="StyledText-sc-1sadyjn-0 hTlKKJ sc-hMqMXs hCtDtz"
      >
        Undo
      </span>
      <div
        className="StyledBox__StyledBoxGap-sc-13pk1d4-1 iEoiXx"
      />
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-arrow-rotate-right fa-xs "
        color="#555555"
        data-icon="arrow-rotate-right"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M496 48V192c0 17.69-14.31 32-32 32H320c-17.69 0-32-14.31-32-32s14.31-32 32-32h63.39c-29.97-39.7-77.25-63.78-127.6-63.78C167.7 96.22 96 167.9 96 256s71.69 159.8 159.8 159.8c34.88 0 68.03-11.03 95.88-31.94c14.22-10.53 34.22-7.75 44.81 6.375c10.59 14.16 7.75 34.22-6.375 44.81c-39.03 29.28-85.36 44.86-134.2 44.86C132.5 479.9 32 379.4 32 256s100.5-223.9 223.9-223.9c69.15 0 134 32.47 176.1 86.12V48c0-17.69 14.31-32 32-32S496 30.31 496 48z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`Storyshots LineViewer Default 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 jpnCZn"
>
  <div
    className="StyledBox-sc-13pk1d4-0 knMaQB"
  >
    <div
      className="StyledBox-sc-13pk1d4-0 eqlRDO sc-jzJRlG byHcWR"
    >
      <div
        className="StyledBox-sc-13pk1d4-0 dYDcGv"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 cGyFlY"
        >
          <div
            className="StyledBox-sc-13pk1d4-0 koruWX"
          >
            <span
              className="StyledText-sc-1sadyjn-0 dxiclx sc-jTzLTM krJVzu"
              size="0.6em"
            >
              Selected Transcription
            </span>
          </div>
        </div>
      </div>
      <div
        className="StyledBox-sc-13pk1d4-0 ionteQ"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 fphcKH"
        />
        <div
          className="StyledBox-sc-13pk1d4-0 hXtuvB"
        >
          
          <div
            className="StyledBox-sc-13pk1d4-0 jmYunQ"
          >
            <label
              checked={false}
              className="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 bowKqg"
              onClick={[Function]}
            >
              <div
                checked={false}
                className="StyledBox-sc-13pk1d4-0 gwogWI StyledCheckBox-sc-1dbk5ju-6 jXdLin"
              >
                <input
                  checked={false}
                  className="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 iuSxgv"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="checkbox"
                />
                <div
                  checked={false}
                  className="StyledBox-sc-13pk1d4-0 ePeoSc StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 fxKnpz"
                />
              </div>
            </label>
            <div
              className="StyledBox__StyledBoxGap-sc-13pk1d4-1 iEoiXx"
            />
            <div
              className="StyledBox-sc-13pk1d4-0 fCLZEk"
            >
              <div
                className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 VFomL"
              >
                <input
                  autoComplete="off"
                  className="StyledTextInput-sc-1x30a0s-0 hKDmcF"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  placeholder="Write new..."
                  size="xsmall"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="StyledBox-sc-13pk1d4-0 jtTEOq"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 jmYunQ"
        >
          <button
            className="StyledButton-sc-323bzc-0 jfbKsv"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            type="button"
          >
            <span
              className="StyledText-sc-1sadyjn-0 cDmvCm sc-jTzLTM krJVzu"
              size="xsmall"
            >
              Cancel
            </span>
          </button>
        </div>
        <div
          className="StyledBox-sc-13pk1d4-0 cXyCMS"
        >
          <button
            className="StyledButton-sc-323bzc-0 chnll"
            disabled={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            type="button"
          >
            <span
              className="StyledText-sc-1sadyjn-0 cDmvCm sc-jTzLTM krJVzu"
              size="xsmall"
            >
              Add Line
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots MarkApproved Default 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 jpnCZn"
>
  <label
    checked={false}
    className="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 fDNAwi"
    disabled={false}
    onClick={[Function]}
  >
    <span
      className="StyledText-sc-1sadyjn-0 hTlKKJ sc-kEYyzF ggEPv"
    >
      Ready For Review
    </span>
    <div
      checked={false}
      className="StyledBox-sc-13pk1d4-0 gQwoEq StyledCheckBox-sc-1dbk5ju-6 jXdLin"
      disabled={false}
    >
      <input
        checked={false}
        className="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 cmPpnw"
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="checkbox"
      />
      <span
        checked={false}
        className="StyledCheckBox__StyledCheckBoxToggle-sc-1dbk5ju-4 fUIWkU"
        disabled={false}
      >
        <span
          checked={false}
          className="StyledCheckBox__StyledCheckBoxKnob-sc-1dbk5ju-5 GTsLr"
          disabled={false}
        />
      </span>
    </div>
  </label>
</div>
`;

exports[`Storyshots MetadataButton Default 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 jpnCZn"
>
  <div
    className="StyledBox-sc-13pk1d4-0 knMaQB"
  >
    <div
      className="StyledBox-sc-13pk1d4-0 dapJBf"
    >
      <button
        aria-label="Open Metadata Information"
        className="StyledButton-sc-323bzc-0 kIGMdK"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        type="button"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 fWGhHx"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-info sc-cvbbAY josHqt"
            data-icon="info"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 192 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M160 448h-32V224c0-17.69-14.33-32-32-32L32 192c-17.67 0-32 14.31-32 32s14.33 31.1 32 31.1h32v192H32c-17.67 0-32 14.31-32 32s14.33 32 32 32h128c17.67 0 32-14.31 32-32S177.7 448 160 448zM96 128c26.51 0 48-21.49 48-48S122.5 32.01 96 32.01s-48 21.49-48 48S69.49 128 96 128z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots SearchModalContainer Default 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 jpnCZn"
>
  <div
    className="StyledBox-sc-13pk1d4-0 knMaQB"
  >
    <div
      className="StyledBox-sc-13pk1d4-0 hXCUVc"
    >
      <div
        className="StyledBox-sc-13pk1d4-0 cokIGr"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 koruWX"
        >
          <div
            className="StyledBox-sc-13pk1d4-0 cGyFlY"
          >
            <span
              className="StyledText-sc-1sadyjn-0 cbxRyB"
              size="large"
            >
              Search or Filter
            </span>
            <button
              aria-label="Close Subject Search Modal"
              className="StyledButton-sc-323bzc-0 kIGMdK"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              type="button"
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-circle-xmark "
                data-icon="circle-xmark"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 256C0 114.6 114.6 0 256 0C397.4 0 512 114.6 512 256C512 397.4 397.4 512 256 512C114.6 512 0 397.4 0 256zM175 208.1L222.1 255.1L175 303C165.7 312.4 165.7 327.6 175 336.1C184.4 346.3 199.6 346.3 208.1 336.1L255.1 289.9L303 336.1C312.4 346.3 327.6 346.3 336.1 336.1C346.3 327.6 346.3 312.4 336.1 303L289.9 255.1L336.1 208.1C346.3 199.6 346.3 184.4 336.1 175C327.6 165.7 312.4 165.7 303 175L255.1 222.1L208.1 175C199.6 165.7 184.4 165.7 175 175C165.7 184.4 165.7 199.6 175 208.1V208.1z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </button>
          </div>
          <div
            className="StyledBox__StyledBoxGap-sc-13pk1d4-1 bloGGK"
          />
          <span
            className="StyledText-sc-1sadyjn-0 ceLiyb sc-jlyJG iqYbEW"
          >
            Find a specific subject
          </span>
          <div
            className="StyledBox__StyledBoxGap-sc-13pk1d4-1 bloGGK"
          />
          <form
            className="StyledBox-sc-13pk1d4-0 koruWX"
            onSubmit={[Function]}
          >
            <div
              className="StyledBox-sc-13pk1d4-0 bybHCg"
            >
              <div
                className="StyledBox-sc-13pk1d4-0 bSclKh"
              >
                <div
                  className="StyledBox-sc-13pk1d4-0 koruWX FormField__FormFieldBox-m9hood-0 btlOdO sc-gipzik keWqgP"
                >
                  <label
                    className="StyledText-sc-1sadyjn-0 gFYzgc"
                    htmlFor="type"
                  >
                    ID TYPE
                  </label>
                  <div
                    className="StyledBox-sc-13pk1d4-0 cIMTgH"
                  >
                    <button
                      aria-label="Open Drop"
                      className="StyledButton-sc-323bzc-0 dmFHgS Select__StyledSelectDropButton-sc-17idtfo-1 cvpccN"
                      id="type"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                      type="button"
                    >
                      <div
                        className="StyledBox-sc-13pk1d4-0 cGyFlY"
                      >
                        <div
                          className="StyledBox-sc-13pk1d4-0 gbHXHp"
                        >
                          <span
                            className="StyledText-sc-1sadyjn-0 ceLiyb"
                          >
                            Select...
                          </span>
                        </div>
                        <div
                          className="StyledBox-sc-13pk1d4-0 jZzjOu"
                          style={
                            Object {
                              "minWidth": "auto",
                            }
                          }
                        >
                          <svg
                            aria-label="FormDown"
                            className="StyledIcon-ofa7kd-0 bKsZCm"
                            viewBox="0 0 24 24"
                          >
                            <polyline
                              fill="none"
                              points="18 9 12 15 6 9"
                              stroke="#000"
                              strokeWidth="2"
                            />
                          </svg>
                        </div>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
              <div
                className="StyledBox__StyledBoxGap-sc-13pk1d4-1 iEoiXx"
              />
              <div
                className="StyledBox-sc-13pk1d4-0 enNkZt"
              >
                <div
                  className="StyledBox-sc-13pk1d4-0 koruWX FormField__FormFieldBox-m9hood-0 btlOdO sc-gipzik keWqgP"
                >
                  <label
                    className="StyledText-sc-1sadyjn-0 gFYzgc"
                    htmlFor="id"
                  >
                    NAME
                  </label>
                  <div
                    className="StyledBox-sc-13pk1d4-0 cIMTgH"
                  >
                    <div
                      className="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 kYQCpm"
                    >
                      <input
                        autoComplete="off"
                        className="StyledTextInput-sc-1x30a0s-0 bxPWWW"
                        color="red"
                        disabled={false}
                        id="id"
                        name="id"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        placeholder="eg. 58674"
                        size="small"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="StyledBox__StyledBoxGap-sc-13pk1d4-1 bloGGK"
            />
            <span
              className="StyledText-sc-1sadyjn-0 ceLiyb sc-jlyJG iqYbEW"
            >
              Filter subject list by status
            </span>
            <div
              className="StyledBox__StyledBoxGap-sc-13pk1d4-1 bloGGK"
            />
            <div
              className="StyledBox-sc-13pk1d4-0 bnvJhB"
            >
              <div
                className="StyledBox-sc-13pk1d4-0 koruWX"
              >
                <span
                  className="StyledText-sc-1sadyjn-0 eGrHYw"
                >
                  Approval Status
                </span>
                <div
                  className="StyledBox__StyledBoxGap-sc-13pk1d4-1 bloGGK"
                />
                <div
                  className="StyledBox-sc-13pk1d4-0 koruWX FormField__FormFieldBox-m9hood-0 btlOdO"
                >
                  <div
                    className="StyledBox-sc-13pk1d4-0 cIMTgH"
                  >
                    <label
                      checked={false}
                      className="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 iZKIBR"
                      disabled={false}
                      htmlFor="unseen"
                      onClick={[Function]}
                    >
                      <div
                        checked={false}
                        className="StyledBox-sc-13pk1d4-0 fGNplZ StyledCheckBox-sc-1dbk5ju-6 jXdLin"
                        disabled={false}
                      >
                        <input
                          checked={false}
                          className="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 dOxrOf"
                          disabled={false}
                          id="unseen"
                          name="unseen"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          type="checkbox"
                        />
                        <div
                          checked={false}
                          className="StyledBox-sc-13pk1d4-0 hfDYfZ StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 fxKnpz"
                          disabled={false}
                        />
                      </div>
                      <span
                        className="StyledText-sc-1sadyjn-0 ceLiyb"
                        size="small"
                      >
                        UNSEEN
                      </span>
                    </label>
                  </div>
                </div>
                <div
                  className="StyledBox__StyledBoxGap-sc-13pk1d4-1 bloGGK"
                />
                <div
                  className="StyledBox-sc-13pk1d4-0 koruWX FormField__FormFieldBox-m9hood-0 btlOdO"
                >
                  <div
                    className="StyledBox-sc-13pk1d4-0 cIMTgH"
                  >
                    <label
                      checked={false}
                      className="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 iZKIBR"
                      disabled={false}
                      htmlFor="in_progress"
                      onClick={[Function]}
                    >
                      <div
                        checked={false}
                        className="StyledBox-sc-13pk1d4-0 fGNplZ StyledCheckBox-sc-1dbk5ju-6 jXdLin"
                        disabled={false}
                      >
                        <input
                          checked={false}
                          className="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 dOxrOf"
                          disabled={false}
                          id="in_progress"
                          name="in_progress"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          type="checkbox"
                        />
                        <div
                          checked={false}
                          className="StyledBox-sc-13pk1d4-0 hfDYfZ StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 fxKnpz"
                          disabled={false}
                        />
                      </div>
                      <span
                        className="StyledText-sc-1sadyjn-0 ceLiyb"
                        size="small"
                      >
                        IN PROGRESS
                      </span>
                    </label>
                  </div>
                </div>
                <div
                  className="StyledBox__StyledBoxGap-sc-13pk1d4-1 bloGGK"
                />
                <div
                  className="StyledBox-sc-13pk1d4-0 koruWX FormField__FormFieldBox-m9hood-0 btlOdO"
                >
                  <div
                    className="StyledBox-sc-13pk1d4-0 cIMTgH"
                  >
                    <label
                      checked={false}
                      className="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 iZKIBR"
                      disabled={false}
                      htmlFor="ready"
                      onClick={[Function]}
                    >
                      <div
                        checked={false}
                        className="StyledBox-sc-13pk1d4-0 fGNplZ StyledCheckBox-sc-1dbk5ju-6 jXdLin"
                        disabled={false}
                      >
                        <input
                          checked={false}
                          className="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 dOxrOf"
                          disabled={false}
                          id="ready"
                          name="ready"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          type="checkbox"
                        />
                        <div
                          checked={false}
                          className="StyledBox-sc-13pk1d4-0 hfDYfZ StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 fxKnpz"
                          disabled={false}
                        />
                      </div>
                      <span
                        className="StyledText-sc-1sadyjn-0 ceLiyb"
                        size="small"
                      >
                        READY FOR REVIEW
                      </span>
                    </label>
                  </div>
                </div>
                <div
                  className="StyledBox__StyledBoxGap-sc-13pk1d4-1 bloGGK"
                />
                <div
                  className="StyledBox-sc-13pk1d4-0 koruWX FormField__FormFieldBox-m9hood-0 btlOdO"
                >
                  <div
                    className="StyledBox-sc-13pk1d4-0 cIMTgH"
                  >
                    <label
                      checked={false}
                      className="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 iZKIBR"
                      disabled={false}
                      htmlFor="approved"
                      onClick={[Function]}
                    >
                      <div
                        checked={false}
                        className="StyledBox-sc-13pk1d4-0 fGNplZ StyledCheckBox-sc-1dbk5ju-6 jXdLin"
                        disabled={false}
                      >
                        <input
                          checked={false}
                          className="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 dOxrOf"
                          disabled={false}
                          id="approved"
                          name="approved"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          type="checkbox"
                        />
                        <div
                          checked={false}
                          className="StyledBox-sc-13pk1d4-0 hfDYfZ StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 fxKnpz"
                          disabled={false}
                        />
                      </div>
                      <span
                        className="StyledText-sc-1sadyjn-0 ceLiyb"
                        size="small"
                      >
                        APPROVED
                      </span>
                    </label>
                  </div>
                </div>
              </div>
              <div
                className="StyledBox-sc-13pk1d4-0 koruWX"
              >
                <span
                  className="StyledText-sc-1sadyjn-0 eGrHYw"
                >
                  Additional Filters
                </span>
                <div
                  className="StyledBox__StyledBoxGap-sc-13pk1d4-1 bloGGK"
                />
                <div
                  className="StyledBox-sc-13pk1d4-0 koruWX FormField__FormFieldBox-m9hood-0 btlOdO"
                >
                  <div
                    className="StyledBox-sc-13pk1d4-0 cIMTgH"
                  >
                    <label
                      checked={false}
                      className="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 iZKIBR"
                      disabled={false}
                      htmlFor="flagged"
                      onClick={[Function]}
                    >
                      <div
                        checked={false}
                        className="StyledBox-sc-13pk1d4-0 fGNplZ StyledCheckBox-sc-1dbk5ju-6 jXdLin"
                        disabled={false}
                      >
                        <input
                          checked={false}
                          className="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 dOxrOf"
                          disabled={false}
                          id="flagged"
                          name="flagged"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          type="checkbox"
                        />
                        <div
                          checked={false}
                          className="StyledBox-sc-13pk1d4-0 hfDYfZ StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 fxKnpz"
                          disabled={false}
                        />
                      </div>
                      <span
                        className="StyledText-sc-1sadyjn-0 ceLiyb"
                        size="small"
                      >
                        FLAGGED
                      </span>
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="StyledBox__StyledBoxGap-sc-13pk1d4-1 bloGGK"
            />
            <div
              className="StyledBox-sc-13pk1d4-0 dEYhEg"
            >
              <button
                aria-label="Close Subject Search Modal"
                className="StyledButton-sc-323bzc-0 dmFHgS"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                type="button"
              >
                <span
                  className="StyledText-sc-1sadyjn-0 ceLiyb sc-jlyJG iqYbEW"
                >
                  Close
                </span>
              </button>
              <button
                aria-label="Submit Subject Search Query"
                className="StyledButton-sc-323bzc-0 dmFHgS"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                type="submit"
              >
                <span
                  className="StyledText-sc-1sadyjn-0 ceLiyb sc-jlyJG iqYbEW"
                >
                  Search
                </span>
              </button>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots SubjectLockedModal Default 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 jpnCZn"
>
  <div
    className="StyledBox-sc-13pk1d4-0 knMaQB"
  >
    <div
      className="StyledBox-sc-13pk1d4-0 eBKTXt"
    >
      <span
        className="StyledText-sc-1sadyjn-0 cbxRyB"
        size="large"
      >
        Subject locked
      </span>
      <div
        className="StyledBox__StyledBoxGap-sc-13pk1d4-1 cDZOKh"
      />
      <span
        className="StyledText-sc-1sadyjn-0 ceLiyb sc-gPEVay yONTa"
      >
        This subject cannot be accessed because 
        <strong />
         is currently accessing it.
      </span>
      <div
        className="StyledBox__StyledBoxGap-sc-13pk1d4-1 cDZOKh"
      />
      <span
        className="StyledText-sc-1sadyjn-0 ceLiyb sc-gPEVay yONTa"
      >
        For access, ask them to close their version.
      </span>
      <div
        className="StyledBox__StyledBoxGap-sc-13pk1d4-1 cDZOKh"
      />
      <button
        aria-label="Return to Group Index Page"
        className="StyledButton-sc-323bzc-0 jfbKsv"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        type="button"
      >
        <span
          className="StyledText-sc-1sadyjn-0 ceLiyb"
          size="small"
        >
          BACK TO GROUP INDEX
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots SubjectViewer Default 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 jpnCZn"
>
  <div
    className="StyledBox-sc-13pk1d4-0 NJyzF"
  >
    <div
      className="StyledBox-sc-13pk1d4-0 fsSIbr"
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
    >
      <div
        className="StyledBox-sc-13pk1d4-0 jRmxqc"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 cGyFlY"
        >
          <span
            className="StyledText-sc-1sadyjn-0 bXoRNz"
            size="1em"
          >
            Original Subject
          </span>
          <div
            className="StyledBox-sc-13pk1d4-0 jmYunQ"
          >
            <button
              className="StyledButton-sc-323bzc-0 jfbKsv"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              type="button"
            >
              <span
                className="StyledText-sc-1sadyjn-0 ceLiyb"
              >
                HIDE ALL LINES
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        className="StyledBox-sc-13pk1d4-0 gcHNQT sc-hzDkRC eniHZY"
      >
        <div
          className="StyledBox-sc-13pk1d4-0 gcHNQT sc-jhAzac ZlZeV"
        >
          <div
            className="StyledBox-sc-13pk1d4-0 knzWfv sc-bRBYWo cfFjGV"
          />
          <div
            className="StyledBox-sc-13pk1d4-0 koruWX sc-jhAzac sc-fBuWsC deBBpZ"
          />
        </div>
        <div
          className="StyledBox-sc-13pk1d4-0 gcHNQT"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots UnapproveModal Default 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 jpnCZn"
>
  <div
    className="StyledBox-sc-13pk1d4-0 knMaQB"
  >
    <div
      className="StyledBox-sc-13pk1d4-0 eBKTXt"
    >
      <div
        className="StyledBox-sc-13pk1d4-0 bnvJhB"
      >
        <span
          className="StyledText-sc-1sadyjn-0 cbxRyB"
          size="large"
        >
          Unapprove subject data
        </span>
        <button
          aria-label="Close Unapprove Subject Modal"
          className="StyledButton-sc-323bzc-0 jfbKsv"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-circle-xmark fa-xs "
            data-icon="circle-xmark"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 256C0 114.6 114.6 0 256 0C397.4 0 512 114.6 512 256C512 397.4 397.4 512 256 512C114.6 512 0 397.4 0 256zM175 208.1L222.1 255.1L175 303C165.7 312.4 165.7 327.6 175 336.1C184.4 346.3 199.6 346.3 208.1 336.1L255.1 289.9L303 336.1C312.4 346.3 327.6 346.3 336.1 336.1C346.3 327.6 346.3 312.4 336.1 303L289.9 255.1L336.1 208.1C346.3 199.6 346.3 184.4 336.1 175C327.6 165.7 312.4 165.7 303 175L255.1 222.1L208.1 175C199.6 165.7 184.4 165.7 175 175C165.7 184.4 165.7 199.6 175 208.1V208.1z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </button>
      </div>
      <div
        className="StyledBox__StyledBoxGap-sc-13pk1d4-1 cDZOKh"
      />
      <span
        className="StyledText-sc-1sadyjn-0 ceLiyb sc-iRbamj jHMZAa"
      >
        By unapproving this subject, the subject's data will be unavailable for future downloads until re-marked as approved.
      </span>
      <div
        className="StyledBox__StyledBoxGap-sc-13pk1d4-1 cDZOKh"
      />
      <span
        className="StyledText-sc-1sadyjn-0 ceLiyb sc-iRbamj jHMZAa"
      >
        This action can be reversed at any time.
      </span>
      <div
        className="StyledBox__StyledBoxGap-sc-13pk1d4-1 cDZOKh"
      />
      <div
        className="StyledBox-sc-13pk1d4-0 dEYhEg"
      >
        <button
          aria-label="Close Unapprove Subject Modal"
          className="StyledButton-sc-323bzc-0 jfbKsv"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          type="button"
        >
          <span
            className="StyledText-sc-1sadyjn-0 ceLiyb"
            size="small"
          >
            CLOSE AND CANCEL
          </span>
        </button>
        <button
          aria-label="Confirm to Unapprove Subject"
          className="StyledButton-sc-323bzc-0 jfbKsv"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          type="button"
        >
          <span
            className="StyledText-sc-1sadyjn-0 ceLiyb"
            size="small"
          >
            YES, UNAPPROVE
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
